clang-tidy: Fix unnecessary copy/ref churn of for loop variables in WebKit <https://webkit.org/b/202096>

Reviewed by Darin Adler.

Fix unwanted copying/ref churn of loop variables by making them
const references.

* NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:
(WebKit::domainsToString):
* UIProcess/ios/WKActionSheetAssistant.mm:
(-[WKActionSheetAssistant presentationRectForElementUsingClosestIndicatedRect]):
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _singleTapDidReset:]):
* UIProcess/ios/WebDataListSuggestionsDropdownIOS.mm:
(-[WKDataListSuggestionsControl textSuggestions]):


Canonical link: https://commits.webkit.org/215709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250239 268f45cc-cd09-0410-ab3c-d52691b4dbfc