Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm
@@ -212,7 +212,7 @@ static const CGFloat presentationElementRectPadding = 15;
         indicatedRects.append(rect);
     }
 
-    for (auto path : WebCore::PathUtilities::pathsWithShrinkWrappedRects(indicatedRects, 0)) {
+    for (const auto& path : WebCore::PathUtilities::pathsWithShrinkWrappedRects(indicatedRects, 0)) {
         auto boundingRect = path.fastBoundingRect();
         if (boundingRect.contains(touchLocation))
             return CGRectInset([view convertRect:(CGRect)boundingRect fromView:_view.getAutoreleased()], -presentationElementRectPadding, -presentationElementRectPadding);
